Exception Handling and "optional" refactor